Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10804

obdfilter-survey test_3a: lprocfs_alloc_obd_stats()) ASSERTION( obd->obd_proc_entry != ((void *)0) ) failed; LBUG

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.11.0
    • Lustre 2.11.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for elena <c17455@cray.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/5d126b54-2233-11e8-9ec4-52540065bddc

      [ 3072.347530] LustreError: 30713:0:(lprocfs_status_server.c:647:lprocfs_alloc_obd_stats()) ASSERTION( obd->obd_proc_entry != ((void *)0) ) failed: 
      [ 3072.351782] LustreError: 30713:0:(lprocfs_status_server.c:647:lprocfs_alloc_obd_stats()) LBUG
      [ 3072.354022] Pid: 30713, comm: lctl
      [ 3072.355821] 
      [ 3072.355821] Call Trace:
      [ 3072.359137]  [<ffffffffc06917ae>] libcfs_call_trace+0x4e/0x60 [libcfs]
      [ 3072.361177]  [<ffffffffc069183c>] lbug_with_loc+0x4c/0xb0 [libcfs]
      [ 3072.363336]  [<ffffffffc0cbe06f>] lprocfs_alloc_obd_stats+0x18f/0x200 [obdclass]
      [ 3072.365454]  [<ffffffffc0c81730>] ? lprocfs_obd_setup+0x130/0x320 [obdclass]
      [ 3072.367602]  [<ffffffffc12b13ad>] echo_srv_device_alloc+0x48d/0x540 [obdecho]
      [ 3072.369738]  [<ffffffffc0c91cb4>] obd_setup+0x114/0x2a0 [obdclass]
      [ 3072.371892]  [<ffffffffc0c920e8>] class_setup+0x2a8/0x840 [obdclass]
      [ 3072.373960]  [<ffffffffc0c9651f>] class_process_config+0x1b3f/0x27e0 [obdclass]
      [ 3072.376145]  [<ffffffffc0c86ff9>] ? lprocfs_counter_add+0xf9/0x160 [obdclass]
      [ 3072.378240]  [<ffffffffc0c7053a>] class_handle_ioctl+0x56a/0x1df0 [obdclass]
      [ 3072.380342]  [<ffffffff8121f7b8>] ? destroy_inode+0x38/0x60
      [ 3072.382250]  [<ffffffff812b3ea8>] ? security_capable+0x18/0x20
      [ 3072.384178]  [<ffffffffc0c567f2>] obd_class_ioctl+0xd2/0x170 [obdclass]
      [ 3072.386089]  [<ffffffff8121730d>] do_vfs_ioctl+0x33d/0x540
      [ 3072.387929]  [<ffffffff81224a04>] ? mntput+0x24/0x40
      [ 3072.389676]  [<ffffffff81205013>] ? __fput+0x183/0x260
      [ 3072.391419]  [<ffffffff812175b1>] SyS_ioctl+0xa1/0xc0
      [ 3072.393128]  [<ffffffff816b8930>] ? system_call_after_swapgs+0x15d/0x214
      [ 3072.394862]  [<ffffffff816b89fd>] system_call_fastpath+0x16/0x1b
      [ 3072.396554]  [<ffffffff816b889d>] ? system_call_after_swapgs+0xca/0x214
      [ 3072.398245] 
      [ 3072.399550] Kernel panic - not syncing: LBUG
      

            tappro Mikhail Pershin
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved: