lustre/obdecho/echo_client.c
@@ -3071,7 +3071,7 @@ static int __init obdecho_init(void)
         if (rc != 0)
                 goto failed_0;
 
-	rc = class_register_type(&echo_obd_ops, NULL, false, NULL,
+	rc = class_register_type(&echo_obd_ops, NULL, true, NULL,
 				 LUSTRE_ECHO_NAME, NULL);
 	if (rc != 0)
 		goto failed_1;
